# SphinxAstrology

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AstroDB-data.sql  AstroDB-profiles.sql  AstroDB-texts.sql  AstroDB.sql
app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/cpp/astro/: astrology.c  astrology.h  astronomy.c  astronomy.h  astronomy_data.c  astronomy_data.h  astronomy_fixedstars.c  astronomy_orbits.c  calendar.c  calendar.h  horoscope.c  horoscope.h
app/src/main/cpp/astro/planets/: earth404.c  jupiter404.c  mars404.c  mercury404.c  moon404.c  neptune404.c  pluto404.c  saturn404.c  uranus404.c  venus404.c
app/src/main/res/color/: text_button.xml  text_default.xml
app/src/main/res/drawable/: button.xml  drawer_header.xml  edit_text.xml  ic_launcher_background.xml  listview_item.xml  simple_spinner.xml  splash.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: actionbar_spinner_item.xml  activity_edit_profile.xml  activity_edit_text.xml  activity_help.xml  activity_horoscope.xml  activity_profiles.xml  activity_settings.xml  activity_text.xml  dialog_pick_link.xml  drawer_header.xml  profile_listview_item.xml  simple_spinner_item.xml  text_listview_item.xml  widget_astro_clock.xml
www/api/: .htaccess
www/api/v1/: .config.php  .error.php  .htaccess  .init.php  .profiles.php  .texts.php  .users.php  .votes.php  status.php  test.php  users.php
www/private/: google.php  mysql.php  session.php  sqlite3.php
(+108 files in other folders)
